Change button color to be correctly readable

--- a/app/assets/stylesheets/button_component.css
+++ b/app/assets/stylesheets/button_component.css
@@ -8,7 +8,7 @@
     border-radius: 0.6em;
     font-weight: 500;
     font-size: var(--text-medium);
-    color: var(--button-fg-color, #fff);
+    color: var(--button-fg-color, CurrentColor);
     background-color: var(--button-bg-color, #007bff);
     text-decoration: none;
     transition: background-color 0.25s ease, transform 0.2s ease;
